@@ -3,14 +3,13 @@ package Mojolicious::Plugin::DigestAuth::Util;
 use strict;
 use warnings;
 
-use Mojo::Util qw{md5_sum};
+use Mojo::Util qw{md5_sum unquote};
 use base 'Exporter';
 
-our @EXPORT_OK = qw{checksum parse_header quote unquote b64_encode b64_decode};
+our @EXPORT_OK = qw{checksum parse_header};
 
 sub checksum
 {
-  local $_;
   md5_sum join ':', grep(defined, @_);
 }
 
@@ -29,40 +28,5 @@ sub parse_header
     $parsed;
 }
 
-#
-# These 4 functions are used to maintain backwards compatibility with older versions
-# of Mojolicious and will be removed in the next release.
-#
-sub quote
-{
-  my $str = shift;
-  my $t = Mojo::Util::quote($str);
-  $str = $t if $t;
-  $str;
-}
-
-sub unquote
-{
-  my $str = shift;
-  my $t = Mojo::Util::unquote($str);
-  $str = $t if $t;
-  $str;
-}
-
-sub b64_encode
-{
-  my $str = shift;
-  my $t = Mojo::Util::b64_encode($str);
-  $str = $t if $t;
-  $str;
-}
-
-sub b64_decode
-{
-  my $str = shift;
-  my $t = Mojo::Util::b64_decode($str);
-  $str = $t if $t;
-  $str;
-}
 
 1;
