@@ -1,4 +1,10 @@
 -------------------------
+XXXX-XX-XX	v0.04	
+-------------------------
+* Removed some methods from Util used for Mojo::Util backwards compatibility
+* Fixed 00db.t, now passes on non en-US locale boxes (thanks Dmitriy Shalashov & Alexander Bendo)
+
+-------------------------
 2011-12-12	v0.03	
 -------------------------
 * Fixed URL comparison (Bug #1) 
